# AnalyticMesh

./: .gitignore  LICENSE  README.md  __init__.py
backend/: CMakeLists.txt  __init__.py  main.py  model.py  onnx_io.py  utils.py
backend/inc/: facedata.h  hash.h  kernel.h  macro.h  mlp.h  polymesh.h  printer.h  process.h  states.h  utilities.h  var.h  vecmat.h
backend/libpolytools/: CMakeLists.txt  README.md  __init__.py  cntfaces.py  header.py  poly2tri.py  polymesh.py
backend/libpolytools/src/: polylib.cpp
backend/src/: cuam.cpp  cuam_kernel.cu  kernel.cu  states.cu  utilities.cpp
backend/test/: test_onnx_io.py
examples/: 1_sphere.py  2_polytope.py  3_chair.py  chair.onnx
frontend/: kill_thread.py  onnx_vis.py  server.py
frontend/pages/: package-lock.json  package.json
frontend/pages/public/: readme.html
frontend/pages/src/: App.vue
frontend/pages/src/assets/: index.js
frontend/pages/src/components/: Button.vue  Input.vue  ProcessBar.vue  Terminal.vue  TwoLayerEmbedding.vue
frontend/pages/src/router/: index.js
frontend/pages/src/views/: Error.vue  Home.vue  Operate.vue
